feat: add real time syncing (#5)
* feat: add real time syncing WIP

* feat: add config deserialization & world list implementation

* feat: implement start, stop and reload commands with working timeOffset

* test: remove deprecated tests

* feat: refactor commands & main file

* temp commit

* test: add test & refactor

* feat: refactor start & stop conditions + tests

* feat: enhance command handling and task management + more tests