@@ -10,7 +10,7 @@ plugins {
 
 group = 'org.ninkai'
 version = '0.0.2-SNAPSHOT'
-description = "Ninkai RP Server plugin for day and night cycle aligned on IRL time"
+description = "Ninkai RP Server plugin for day and night cycle aligned on real time"
 def paperVersion = "1.20.1-R0.1-SNAPSHOT"
 
 sonar {
@@ -36,9 +36,14 @@ repositories {
 dependencies {
     compileOnly("io.papermc.paper:paper-api:$paperVersion")
     implementation("com.google.guava:guava:33.4.6-jre")
+
     testImplementation("org.junit.jupiter:junit-jupiter:5.12.1")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    testImplementation("com.github.seeseemelk:MockBukkit-v1.20:3.46.0")
+    testImplementation("org.mockbukkit.mockbukkit:mockbukkit-v1.21:4.45.0")
+}
+
+test {
+    useJUnitPlatform()
 }
 
 def targetJavaVersion = 21
@@ -49,12 +54,6 @@ java {
     if (JavaVersion.current() < javaVersion) {
         toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
     }
-}
-
-test {
-    maxParallelForks = 3
-    useJUnitPlatform()
-    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 tasks {
